@@ -44,6 +44,8 @@ Unreleased.
 - `Range` header parsing function fixed for invalid values ``#974``.
 - Add support for byte Range Requests, see pull request ``#978``.
 - Use modern cryptographic defaults in the dev servers ``#1004``.
+- the post() method of the test client now accept file object through the data
+  parameter.
 
 Version 0.11.12
 ---------------
